# ejdb2haskell

./: .gitignore  .gitmodules  CHANGELOG.md  LICENSE  README.md  Setup.hs  build-and-upload-doc.sh  build-and-upload.sh  configure  ejdb2-binding.cabal  ejdb2.cabal  ejdb2haskell.cabal  hie.yaml
cbits/: finalizer.c  finalizer.h
src/Database/: EJDB2.hs  EJDB2.hsc
src/Database/EJDB2/: Bindings.hs  CollectionMeta.hs  FromJBL.hs  HTTP.hsc  HTTPOptions.hsc  IWKV.hs  IndexMeta.hs  IndexMode.hsc  JBL.hs  JBLDeserialization.hs  KV.hsc  Meta.hs  Options.hsc  Query.hs  QueryConstructor.hs  QueryM.hs  Result.hsc  ToJBL.hs  WAL.hsc  WALOptions.hsc
src/Database/EJDB2/Bindings/: EJDB2.hs  IW.hsc  JBL.hs  JBLStruct.hsc  JQL.hs  Types.hs  Types.hsc
src/Database/EJDB2/Bindings/Types/: EJDB.hs  EJDBDoc.hsc  EJDBExec.hsc  EJDBHttp.hsc  EJDBOpts.hsc  IWKVBase.hsc  IWKVOpts.hsc  IWKVWalOpts.hsc  IndexMode.hsc  JBL.hsc  JQL.hsc  KV.hsc  WALOptions.hsc
src/Database/EJDB2/Bindings/Types/C/: String.hs
test/: Asserts.hs  CollectionTests.hs  DeleteTests.hs  FoldTests.hs  GetTests.hs  IndexTests.hs  Main.hs  MyLibTest.hs  OnlineBackupTests.hs  Plant.hs  PutTests.hs  QueryTests.hs  read-only-db  read-only-db-maker.sh
