cabal-version:       2.4
name:                ejdb2
version:             0.1.0.0
license-file:        LICENSE
author:              Francesco Burelli
maintainer:          francesco.burelli@gmail.com
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Database.EJDB2
  other-modules:
      Database.EJDB2.Bindings
    , Database.EJDB2.Bindings.Types
    , Database.EJDB2.Bindings.Types.EJDBOpts
    , Database.EJDB2.Bindings.Types.EJDBHttp
    , Database.EJDB2.Bindings.Types.IWKVBase
    , Database.EJDB2.Bindings.Types.IWKVOpts
    , Database.EJDB2.Bindings.Types.IWKVWalOpts
  build-depends:       base ^>=4.12.0.0
                     , bytestring ==0.10.10.0
  build-tool-depends:  hsc2hs:hsc2hs
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite ejdb2haskell-test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             MyLibTest.hs
  build-depends:       base ^>=4.12.0.0
                     , ejdb2
