cabal-version:       2.4
name:                ejdb2
version:             0.1.0.0
license-file:        LICENSE
author:              Francesco Burelli
maintainer:          francesco.burelli@gmail.com
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Database.EJDB2
                     , Database.EJDB2.Query
                     , Database.EJDB2.Meta
                     , Database.EJDB2.CollectionMeta
                     , Database.EJDB2.IndexMeta
  other-modules:
      Database.EJDB2.JBL
    , Database.EJDB2.Bindings.EJDB2
    , Database.EJDB2.Bindings.JQL
    , Database.EJDB2.Bindings.JBL
    , Database.EJDB2.Bindings.IW
    , Database.EJDB2.Bindings.Types.C.String
    , Database.EJDB2.Bindings.Types.EJDB
    , Database.EJDB2.Bindings.Types.EJDBOpts
    , Database.EJDB2.Bindings.Types.EJDBHttp
    , Database.EJDB2.Bindings.Types.EJDBExec
    , Database.EJDB2.Bindings.Types.EJDBDoc
    , Database.EJDB2.Bindings.Types.IWKVOpts
    , Database.EJDB2.Bindings.Types.IWKVWalOpts
    , Database.EJDB2.Bindings.Types.IndexMode
  build-depends:       base ^>=4.12.0.0
                     , bytestring ==0.10.10.0
                     , aeson ==1.4.6.0
                     , unordered-containers ==0.2.10.0
  build-tool-depends:  hsc2hs:hsc2hs
  extra-libraries:     ejdb2
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite ejdb2haskell-test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  other-modules:
                       Asserts
                       Plant
                       GetTests
                       PutTests
                       DeleteTests
                       CollectionTests
                       IndexTests
  build-depends:       base ^>=4.12.0.0
                     , tasty ==1.2.3
                     , tasty-hunit ==0.10.0.2
                     , aeson ==1.4.6.0
                     , unordered-containers ==0.2.10.0
                     , vector ==0.12.1.2
                     , ejdb2
